--- a/client/src/components/Projects/Projects.module.scss
+++ b/client/src/components/Projects/Projects.module.scss
@@ -63,9 +63,9 @@
   }
 
   .notification {
-    background: #eb5a46;
+    background: #0009;
     color: #fff;
-    float: right;
+    float: left;
     font-size: 12px;
     line-height: 20px;
     padding: 0px 6px;
