--- a/client/src/components/Header/NotificationsStep.module.scss
+++ b/client/src/components/Header/NotificationsStep.module.scss
@@ -10,7 +10,7 @@
   .itemButton {
     background: transparent;
     box-shadow: none;
-    float: right;
+    float: left;
     height: 20px;
     line-height: 20px;
     margin: 0;
