Fix styling bug on card modal comment section

--- a/client/src/components/CardModal/Activities/Item.module.scss
+++ b/client/src/components/CardModal/Activities/Item.module.scss
@@ -29,7 +29,8 @@
   .text {
     line-height: 20px;
     float: right;
-    margin-right: 4px;
+    margin: 0 4px;
+    direction: rtl;
   }
 
   .user {
