--- a/client/src/components/CardModal/AttachmentAddStep.module.scss
+++ b/client/src/components/CardModal/AttachmentAddStep.module.scss
@@ -14,6 +14,11 @@
   .menuItem {
     margin: 0;
     padding-left: 14px;
+    >span{
+      font-size: smaller;
+      margin-right: 5px;
+      color: #666;
+    }
   }
 
   .tip {
